[gd_scene load_steps=21 format=3 uid="uid://c1wbi2kt7221i"]

[ext_resource type="Script" uid="uid://ffgbnmgbp6br" path="res://src/entities/player_vehicle_2d/player_vehicle_2d.gd" id="1_o8gf6"]
[ext_resource type="PackedScene" uid="uid://dt0q1pb42hs6f" path="res://src/components/velocity/velocity.tscn" id="2_cs8f6"]
[ext_resource type="PackedScene" uid="uid://dejh0cxjkbis1" path="res://src/components/health/health.tscn" id="3_3h6ip"]
[ext_resource type="PackedScene" uid="uid://d1gqsdw8lt5b8" path="res://src/components/square_2d/square_2d.tscn" id="3_b7s65"]
[ext_resource type="PackedScene" uid="uid://cb7koi37ki7ll" path="res://src/components/trail_2d/trail_2d.tscn" id="3_dwlbi"]
[ext_resource type="PackedScene" uid="uid://l01uxojveimi" path="res://src/components/death/death.tscn" id="4_yn0u7"]
[ext_resource type="PackedScene" uid="uid://bxg7f5l5rkhp0" path="res://src/entities/player_vehicle_2d/player_death_2d.tscn" id="5_j4sp8"]
[ext_resource type="PackedScene" uid="uid://c2nw265h7x8ew" path="res://src/components/hitbox/hitbox.tscn" id="7_yn0u7"]

[sub_resource type="Animation" id="Animation_dwlbi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(48, 20)]
}

[sub_resource type="Animation" id="Animation_q3ate"]
resource_name = "boost"
length = 0.400003
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.4),
"transitions": PackedFloat32Array(2, 0.183011, 1.62451),
"update": 0,
"values": [Vector2(84.64, 8.48), Vector2(21.6, 41.825), Vector2(48, 16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rwhi4"]
_data = {
&"RESET": SubResource("Animation_dwlbi"),
&"boost": SubResource("Animation_q3ate")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q3ate"]
animation = &"RESET"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dwlbi"]
animation = &"boost"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rwhi4"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3h6ip"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yn0u7"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_q3ate"]
states/RESET/node = SubResource("AnimationNodeAnimation_q3ate")
states/RESET/position = Vector2(381, 94)
states/boost/node = SubResource("AnimationNodeAnimation_dwlbi")
states/boost/position = Vector2(543, 92)
transitions = ["Start", "RESET", SubResource("AnimationNodeStateMachineTransition_rwhi4"), "RESET", "boost", SubResource("AnimationNodeStateMachineTransition_3h6ip"), "boost", "RESET", SubResource("AnimationNodeStateMachineTransition_yn0u7")]

[sub_resource type="Curve" id="Curve_dwlbi"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_dwlbi"]
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3h6ip"]
size = Vector2(40, 16)

[node name="PlayerVehicle2D" type="Node2D"]
position = Vector2(0, -1)
script = ExtResource("1_o8gf6")
_boost_speed = 1000.0
metadata/_edit_group_ = true

[node name="Velocity" parent="." instance=ExtResource("2_cs8f6")]
_max_speed = 300
_acceleration = 10.0

[node name="Health" parent="." node_paths=PackedStringArray("hitbox") instance=ExtResource("3_3h6ip")]
hitbox = NodePath("../Hitbox")

[node name="Death" parent="." node_paths=PackedStringArray("_health") instance=ExtResource("4_yn0u7")]
_health = NodePath("../Health")
_death_scene = ExtResource("5_j4sp8")

[node name="BoostTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rwhi4")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_q3ate")
anim_player = NodePath("../AnimationPlayer")

[node name="Behind" type="Marker2D" parent="."]
position = Vector2(-23, 0)

[node name="Trail2d" parent="Behind" instance=ExtResource("3_dwlbi")]
show_behind_parent = true
z_index = -1
width = 24.61
width_curve = SubResource("Curve_dwlbi")
gradient = SubResource("Gradient_dwlbi")

[node name="BodySprite" parent="." instance=ExtResource("3_b7s65")]
modulate = Color(0.654918, 0.744686, 0.910997, 1)
scale = Vector2(48, 20)

[node name="PrimarySlot" type="Marker2D" parent="."]
position = Vector2(30, 8)

[node name="SecondarySlot" type="Marker2D" parent="."]
position = Vector2(30, -8)

[node name="MeleeSlot" type="Marker2D" parent="."]
position = Vector2(25, 0)

[node name="BulletSpawner" type="Marker2D" parent="."]
position = Vector2(32, 0)

[node name="Hitbox" parent="." instance=ExtResource("7_yn0u7")]
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-2.5, 0)
shape = SubResource("RectangleShape2D_3h6ip")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="PrimaryAmmoHBox" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PrimaryAmmoCountLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/PrimaryAmmoHBox"]
layout_mode = 2
text = "Primary ammo:"

[node name="PrimaryAmmoCount" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/PrimaryAmmoHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "100"

[node name="SecondaryAmmoHBox" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SecondaryAmmoCountLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/SecondaryAmmoHBox"]
layout_mode = 2
text = "Secondary ammo:"

[node name="SecondaryAmmoCount" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/SecondaryAmmoHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "100"

[node name="HealthHBox" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HealthHBox"]
layout_mode = 2
text = "Health:"

[node name="HealthCount" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HealthHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "100"
